【BUG】linux环境下getInstanceStrong的效率太差导致应用阻塞，改为new SecureRandom和hutool的保持一致； 去掉assert关键词